fix: remove extra space before link icons

--- a/src/styles/base/typography.css
+++ b/src/styles/base/typography.css
@@ -36,6 +36,10 @@ a {
     --lang-icon: "[" attr(hreflang) "]";
   }
 
+  &:where(:not([hreflang])) {
+    --is-lang-hidden: "";
+  }
+
   &:where([rel~="external"]:not(.download)) {
     --link-icon: var(--external-icon);
   }
